Closed Bug 18563 Opened 25 years ago Closed 24 years ago

Win32 - Installer doesn't navigate directories well

Categories

(SeaMonkey :: Installer, defect, P3)

x86
Windows NT

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: cpratt, Assigned: ssu0262)

Details

(Keywords: platform-parity)

Build ID: 1999111017 (M11)
Platform: Windows (this bug is Win32 specific)

To reproduce:
- Download the seamonkey32e.exe file
- Launch it
- When you get to the Setup Type screen, click the Browse button to select a
different installation directory
- On a typical Windows NT system, the desktop is at the following location:
c:\%WINDIR%\Profiles\%USERNAME%\Desktop
For example, on my PC, it's c:\winnt\Profiles\cpratt\Desktop
If you click your way to that directory using the Select a directory feature in
our installer, I instead get:
c:\WINNT\Desktop
This is incorrect. That directory does not exist on my system; the installer
will however create it.
Severity: major → minor
btw, if you manually type in the directory, it does get installed into the
correct place. this more of an annoyance than a really serious problem.
Status: NEW → ASSIGNED
Target Milestone: M15
setting target milestone to m15
Keywords: pp
Summary: [PP] Win32 - Installer doesn't navigate directories well → Win32 - Installer doesn't navigate directories well
mass change to M16
Target Milestone: M15 → M16
fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Sean,

I see this scenario that cpratt mentions here still.  Using his test case as 
well as the one I showed you.  I don't see mention of temp directory- maybe we 
were talking about a different bug.

I can use c:\winnt\profiles\gbush\desktop and boom- it jumps to c:\winnt\desktop

The other test case was d:\beta2\403\beta2\403 and it jumped to d:\beta2 from 
d:\beta2\403\beta2 or to D:\beta2\403 from d:\beta2\403\beta2\403- doesnt' like 
repeats.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: M16 → M18
it's fixed now (both cases should work).
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
build 2000051109M16
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.