fixing bug #18563.  Select Directory dialog now works correctly.  affects only windows platforms.